# momo_ml

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.ipynb  momo_report_demo.html  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish.yml
examples/: demo_data_drift_detect.ipynb  demo_model_monitor.ipynb  demo_performance_monitor.ipynb  demo_prediction_drift.ipynb  demo_report_builder.ipynb  momo_report_demo.html  monitoring_report.json  monitoring_report.md
momo_ml/: __init__.py
momo_ml/metrics/: __init__.py  js.py  kl.py  ks.py  performance_metrics.py  psi.py  wd.py
momo_ml/monitor/: __init__.py  data_drift.py  model_monitor.py  performance.py  prediction.py  prediction_drift.py
momo_ml/report/: __init__.py  report_builder.py
momo_ml/utils/: __init__.py  plotting.py  validation.py
tests/: test_data_drift.py  test_model_monitor.py  test_performance.py  test_performance_metrics.py  test_prediction_drift.py  test_psi.py  test_report_builder.py  test_test_report_builder.py  test_validation.py
