[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "momo-ml"
version = "0.1.3"
description = "A production-oriented model monitoring library for detecting performance drift, data drift, and prediction drift, with automated reporting for ML systems."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "YHJYH"}  # 可加 email：, email = "xxx@example.com"
]
license = {file = "LICENSE"}
keywords = ["model monitoring", "drift detection", "MLOps", "machine learning", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/YHJYH/momo_ml"
Source = "https://github.com/YHJYH/momo_ml"
Issues = "https://github.com/YHJYH/momo_ml/issues"

# 如需将 report 模板等静态资源一起打包，请启用下面两段（以及 MANIFEST.in 已包含 *.html）
[tool.setuptools.package-data]
"momo_ml.report" = ["*.html"]
