[metadata]
name = momo-ml
version = 0.1.0
description = A production-oriented model monitoring library for detecting performance drift, data drift, and prediction drift, with automated reporting for ML systems.
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourname/momo_ml
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    numpy
    pandas
    scikit-learn
    scipy
    matplotlib
    plotly

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    pytest
    black
    flake8
